--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,22 @@
-# Core dependencies
-beautifulsoup4==4.13.3  # HTML parsing
-chromadb==0.6.3  # Vector database for embeddings
-ConfigParser==7.2.0  # Configuration file parsing
-contextlib2==21.6.0  # Context management utilities
-cryptography==44.0.2  # Encryption and security utilities
-Cython==3.0.12  # C extensions for Python performance
+# Core libraries used in your scripts
+requests
+beautifulsoup4
+chromadb
+sumy
+nltk
+pymupdf
+pillow
+pytesseract
 
-# Documentation and utilities
-docutils==0.21.2  # Documentation utilities
-Sphinx==8.2.3  # Documentation generator for Python projects
+# Dependencies that chromadb and embeddings usually need
+sentence-transformers
+torch
+transformers
+tqdm
+numpy
+scipy
+scikit-learn
 
-# Parsing and text processing
-fitz==0.0.1.dev2  # PDF processing (PyMuPDF)
-HTMLParser==0.0.2  # HTML parsing utilities
-pytesseract==0.3.13  # Optical character recognition (OCR)
-
-# Interactive development and widgets
-ipython==8.12.3  # Interactive Python shell
-ipywidgets==8.1.5  # Interactive widgets for Jupyter
-Jinja2==3.1.6  # Template engine for Python
-
-# Java integration (if required)
-jnius==1.1.0  # Java integration with Python
-
-# Security and authentication
-keyring==25.6.0  # Secure credential storage
-pyOpenSSL==25.0.0  # OpenSSL bindings for Python
-
-# Miscellaneous utilities
-lockfile==0.12.2  # File locking mechanisms
-mock==5.2.0  # Mocking for unit testing
-numpy==2.2.4  # Numerical computing library
-Pillow==11.1.0  # Image processing library
-protobuf==6.30.2  # Protocol Buffers for structured data serialization
-pywin32==306  # Windows API bindings for Python
-railroad==0.5.0  # Diagram generation (if applicable)
-tornado==6.4.2  # Asynchronous networking library
-truststore==0.10.1  # Certificate trust store utilities
-urllib3_secure_extra==0.1.0  # Enhanced security for urllib3
+# Extra: useful for some sentence-transformer models
+protobuf
+huggingface-hub
